Fix alignment

--- a/src/index.css
+++ b/src/index.css
@@ -150,7 +150,7 @@ code {
 }
 
 .statistics {
-  width: 90%;
+  width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
